--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Web3.js React Integration</title>
+    </style>
   </head>
   <body>
     <noscript>
